--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
+    <title>ThreeJs</title>
+    <meta name='viewport' content='width=device-width' />
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        
+        html,
+        body {
+            margin: 0;
+            height: 100%;
+        }
+        
+        #app {
+            height: 100%;
+            width: 100%;
+            display: block;
+        }
+    </style>
+</head>
+
+<body>
+    <canvas id="app"></canvas>
     <script type="module" src="/src/main.ts"></script>
-  </body>
+</body>
+
 </html>
